fix API get Airport
