# config/routes/airport.js
@@ -8,8 +8,8 @@ const Authentication = require("../../middlewares/authenticate");
 const isAdmin = require("../../middlewares/isAdmin");
 
 router.post("/create", Authentication, isAdmin, airport.createAirport);
-router.get("/", Authentication, airport.getAirport);
-router.get("/:id", Authentication, airport.getAirportById);
+router.get("/", airport.getAirport);
+router.get("/:id", airport.getAirportById);
 router.put("/update/:id", Authentication, isAdmin, airport.updateAirport);
 router.delete("/delete/:id", Authentication, isAdmin, airport.deleteAirport);
 
